[sync] Cache the value of kEnableLocalSyncBackend in SyncPrefs.

The value could change during startup when delivered through policy
but the backend can not be switched on the fly. So make sure the
first seen value is preserved.

BUG=736408

Change-Id: Ie608e9735b6009df3cd7070338412bd5b83376f4
Reviewed-on: https://chromium-review.googlesource.com/586688
Reviewed-by: Sky Malice <skym@chromium.org>
Commit-Queue: Julian Pastarmov <pastarmovj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490970}
Former-commit-id: a032fa6ac58821217a2515dd826c5d19aa4b50e0